# 14-SECOP-Dr-Camila-Mendoza

./: .env.example  .gitignore  AUDIT-REPORT-2026-04-25.md  AUDITORIA.md  CLAUDE.md  COMPLIANCE-REPORT-2026-04-25.md  INSTRUCCIONES.md  MANUAL_USUARIO.md  PROMPT_NUEVA_SESION.md  PROMPT_REUSAR_DASHBOARD.md  PR_BODY.md  README.md  SCRAPER_SETUP.md  VERIFICATION-REPORT-2026-04-25.md  _APRENDIZAJES_DASHBOARD_2026-04-25.md  _AUDITORIA_DASHBOARD_2026-04-26.json  _AUDITORIA_DASHBOARD_2026-04-26.md  _AUDITORIA_DASHBOARD_2026-04-27.json  _AUDITORIA_DASHBOARD_2026-04-27.md  _AUDITORIA_DASHBOARD_2026-04-28.json  _AUDITORIA_DASHBOARD_2026-04-28.md  _AUDITORIA_DASHBOARD_2026-04-29.json  _AUDITORIA_DASHBOARD_2026-04-29.md  _AUDITORIA_DASHBOARD_2026-04-30.json  _AUDITORIA_DASHBOARD_2026-04-30.md  _AUDITORIA_DASHBOARD_2026-05-01.json  _AUDITORIA_DASHBOARD_2026-05-01.md  _AUDITORIA_DASHBOARD_2026-05-02.json  _AUDITORIA_DASHBOARD_2026-05-02.md  _AUDITORIA_PROACTIVA_2026-04-27.md  _CARDINAL_IMPOSIBLES_2026-04-27.md  _DISCREPANCIAS_FUENTES_2026-04-27.json  _DISCREPANCIAS_FUENTES_2026-04-27.md  _PATCH_PLAN_CARDINAL_PURE_2026-04-27_EJECUTADO.md  _PLAN_CONSECUTIVO_FEAB.md  _PLAN_OCR_MODIFICATORIOS.md  _dump_html.py  actualizar-excel.bat  ejecutar.bat  ejecutar_pro.bat  (+8 more)
.github/workflows/: auditoria-diaria.yml  build-exe.yml  deploy-pages.yml  ocr-modificatorios-mensual.yml  refresh-seeds.yml  release.yml  scrape-portal-mensual.yml
app/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/public/data/: discrepancias_fuentes_seed.json  modificatorios_classified.json  portal_opportunity_seed.json  secop_integrado_seed.json  watched_urls.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: access-gate.tsx  contracts-table.tsx  detail-dialog.tsx  mods-panel.tsx  refresh-modal.tsx  slicer-pills.tsx  sync-indicator.tsx  unified-table.tsx  update-prompt.tsx  watch-list.tsx
app/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  input.tsx  popover.tsx
app/src/lib/: api.ts  classify-modificatorios.ts  export-excel.ts  socrata.ts  state-store.ts  utils.ts
app/src/lib/sync/: config.ts  crypto.ts  gist.ts
scripts/: audit_dashboard_full.py  cross_check_fuentes.py  download_modificatorios_pdfs.py  enrich_vigencia.py  extract_modificatorio_details.py  generate_modificatorios_classified.py  ocr_classify_modificatorios.py  refresh-seeds.ps1  release.ps1  scrape_portal.py  smoke_e2e_camila.py  stamp_portal_seed.py  sync_secop_integrado.py  update.ps1  validate_cardinal_imposibles.py  verify_multilayer.py  verify_watch_list.py
src/secop_ii/: __main__.py  api.py  audit.py  audit_log.py  changelog.py  cli.py  config.py  detalle_html.py  discrepancies.py  excel_io.py  excel_pro.py  feab_changelog.py  feab_columns.py  feab_dashboard.py  feab_validation.py  feab_view.py  launcher.py  launcher_pro.py  launcher_window.py  mcp_server.py  notice_resolver.py  observaciones.py  orchestrator.py  paths.py  pdf_reader.py  portal_scraper.py  secop_client.py  tracking.py  url_parser.py  verify.py
src/secop_ii/extractors/: __init__.py  auditoria.py  base.py  contrato_full.py  documentos.py  feab_fill.py  garantias.py  modificatorios.py  mods_proceso.py  pagos.py  portal.py  proceso_full.py  seguimiento.py
src/secop_ii/ui/: streamlit_app.py
tauri/: Cargo.toml  README.md  tauri.conf.json
tauri/binaries/: .gitkeep
tauri/capabilities/: default.json
tauri/src/: main.rs
tests/: test_api_watch_import.py  test_audit_log.py  test_auditoria.py  test_data_integrity.py  test_discrepancies.py  test_excel_flow.py  test_excel_pro.py  test_extract_modificatorio_details.py  test_feab_fill.py  test_feab_property.py  test_modificatorios.py  test_new_extractors.py  test_pdf_reader.py  test_portal_scraper_parser.py  test_precision.py  test_row_ops.py  test_tracking.py  test_url_parser.py
tests/fixtures/: con_modificatorios_adiciones.json  con_modificatorios_contratos.json  con_modificatorios_proceso.json  ejemplo.xlsx  ppi_46305103_proceso.json
tests/fixtures/portal_html/: sample_complete.html
