[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dra-cami-contractual"
version = "0.2.0"
description = "Dra Cami Contractual — espejo automático del SECOP II para FEAB / Fiscalía General de la Nación"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FEAB · Fiscalía General de la Nación" }]
dependencies = [
    # ---- HTTP / API ----
    "requests>=2.32",
    "httpx>=0.28",
    "requests-cache>=1.2",
    # Loosen >=8.1 (era >=9.0) para compatibilidad con playwright-recaptcha
    # 0.5.x que pinea tenacity==8.3.0. secop_client.py usa solo la API estable
    # disponible en 8 y 9 (retry/stop_after_attempt/wait_exponential).
    "tenacity>=8.1",

    # ---- Excel ----
    "openpyxl>=3.1",
    "xlsxwriter>=3.2",
    "python-calamine>=0.4",

    # ---- DataFrames & embedded analytics ----
    "pandas>=2.2",
    "polars>=1.20",
    "pyarrow>=14",
    "duckdb>=1.0",

    # ---- PDF reading (multi-engine cascade) ----
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "pypdf>=5",
    "pypdfium2>=4",
    "pdfminer.six>=20240700",
    "pikepdf>=8",
    "pytesseract>=0.3",

    # ---- Document writing (PDF / Word for oficios) ----
    "reportlab>=4.2",
    "fpdf2>=2.7",
    "xhtml2pdf>=0.2",
    "python-docx>=1.1",
    "docxtpl>=0.18",

    # ---- UI ----
    "streamlit>=1.36",
    "streamlit-aggrid>=0.3",
    "streamlit-extras>=0.5",
    "streamlit-option-menu>=0.3",
    "streamlit-tags>=1.2",
    "streamlit-shadcn-ui>=0.1",
    "streamlit-pdf-viewer>=0.0.20",
    "streamlit-card>=1.0",
    "streamlit-elements>=0.1",
    "streamlit-toggle>=0.1",
    "streamlit-lottie>=0.0.5",

    # ---- Charts ----
    "plotly>=5.20",
    "altair>=5",
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # ---- Models / config ----
    "pydantic>=2.7",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2",
    "tinydb>=4",
    "python-dotenv>=1.0",
    "pyyaml>=6",
    "toml>=0.10",

    # ---- Text / dates / fuzzy matching ----
    "python-dateutil>=2.9",
    "dateparser>=1.2",
    "pendulum>=3",
    "rapidfuzz>=3.6",
    "python-slugify>=8",
    "Unidecode>=1.3",
    "humanize>=4",
    "chardet>=5",
    "filetype>=1.2",
    "selectolax>=0.3",

    # ---- Imaging ----
    "Pillow>=10",
    "qrcode>=7",

    # ---- CLI niceties ----
    "typer>=0.12",
    "rich>=13",
    "tqdm>=4.66",
    "tabulate>=0.9",
    "prettytable>=3",
    "loguru>=0.7",
    "structlog>=24",
    "diskcache>=5.6",
    "pyperclip>=1.9",
    "questionary>=2",

    # ---- Performance / utility ----
    "orjson>=3.10",
    "joblib>=1.4",
    "watchfiles>=0.22",

    # ---- Desktop notifications ----
    "plyer>=2.1",
    "winotify>=1.1",

    # ---- Native window wrapper (no browser chrome) ----
    "pywebview>=5.0",

    # ---- MCP server (Model Context Protocol — for Claude integration) ----
    "mcp[cli]>=1.0",

    # ---- Crypto / security ----
    "cryptography>=42",

    # ---- Browser scraping (portal fallback) ----
    "playwright>=1.40",
    "patchright>=1.40",
    "playwright-stealth>=2",
    "playwright-recaptcha>=0.5",
    "SpeechRecognition>=3.10",
    "pydub>=0.25",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "browser-cookie3>=0.20",

    # ---- Whisper local for captcha audio (free, MIT, no API key) ----
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "responses>=0.25",
    "hypothesis>=6.100",
    "Faker>=25",
    "pyinstaller>=6.10",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
secop-ii = "secop_ii.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
