[package]
name = "dra-cami-contractual"
version = "1.0.0"
description = "Sistema de Seguimiento Contratos FEAB · Dra Cami"
authors = ["FEAB · Fiscalía General de la Nación"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
