[package]
name = "dra-cami-contractual"
version = "1.0.0"
description = "Sistema de Seguimiento Contratos FEAB · Dra Cami"
authors = ["FEAB · Fiscalía General de la Nación"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Auto-updater: chequea GitHub Releases en busca de versiones nuevas,
# verifica la firma minisign Ed25519 y reemplaza el .msi vivo. Pareja
# con `@tauri-apps/plugin-updater` en el frontend para el popup.
tauri-plugin-updater = "2"
# Hace falta para que el frontend pueda hacer `relaunch()` después del
# update — el plugin-updater prepara los archivos pero quien re-arranca
# la app es el plugin-process.
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
